# idk

./: .gitignore  Data_Deployment_ipynb.ipynb  README.md  download.sh  prepare.py  pyproject.toml  test_mode.py  test_model.py  train.py
